--- a/_posts/2019-12-26-the-us-narrative-today.html
+++ b/_posts/2019-12-26-the-us-narrative-today.html
@@ -1780,107 +1780,107 @@ stories:
   domain: http://www.starkvilledailynews.com/
   link: https://www.starkvilledailynews.com/news/expert-offers-advice-for-beating-the-holiday-blues/article_496b0dfa-27e9-11ea-b60a-d7352e4ccb77.html
 images:
-- name: los-angeles-from-observatory-losangeles-from-observatory-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-alberto-giacometti.jpg
-- name: beach-rocks-beach-rocks-currents-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-blue-brush.jpg
-- name: store-on-corner-oldcabin-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-umberto-bocc.jpg
-- name: old-cabin-oldcabin-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-really-hot.jpg
-- name: curtain-curtain-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-oily-mcoilface.jpg
-- name: curtain-curtain-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-bright-sand.jpg
-- name: treeinhills-yellowtree-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/treeinhills-yellowtree-still-1200.jpg
-- name: store-on-corner-store-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-far-away.jpg
-- name: old-church-oldchurch-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-purp-paper.jpg
-- name: gypsy-wagon-gypsywagon-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-post-modern.jpg
-- name: old-door-lock-old-door-lock-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-alberto-giacometti.jpg
-- name: cargo-ship-cargo-ship-on-sea-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-bright-sand.jpg
-- name: server-cloud-server-racks-door.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door.jpg
-- name: status-berlin-status-berlin-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-internet-numbers.jpg
-- name: legal-statue-legalstatue-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-far-away.jpg
+- name: powerlines-power-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-purp-paper.jpg
+- name: window-window-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-dark-soul.jpg
+- name: lincoln-memorial-lincolnmemorial-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-green-zuma.jpg
+- name: hollywood-building-hollywood-building-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-satan-red.jpg
+- name: carry-load-carryload-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-dry-skin.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-clean-view.jpg
+- name: bf-skinner-lincoln-sitting-front.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-lincoln-sitting-front.jpg
+- name: aws-s3-stories-statue-face-open-mouth-blue-circuit.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-statue-face-open-mouth-blue-circuit.png
+- name: supreme-court-supremecourt-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-light-dali.jpg
+- name: razorcliff-razorcliff-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-yellow-paper.jpg
+- name: rockingchair-face-2-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-alien-goggles.jpg
+- name: bordercrossing-bordercrossing-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-alien-goggles.jpg
+- name: oldcabin-oldcabin-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-gred-mash.jpg
+- name: old-door-lock-old-door-lock-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-crunch-paper.jpg
+- name: capital-battle-capitolbattle-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-dali-three.jpg
+- name: oldhousecars-house-old-cars-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-kandinsky-bv.jpg
+- name: status-berlin-status-berlin-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-dry-skin.jpg
+- name: locked-up-steam-lock-up-steam-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-umberto-bocc.jpg
+- name: curtain-curtain-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-matrix.jpg
+- name: old-church-oldchurch-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-satan-red.jpg
+- name: nazi-invasion-white-house-west-wing-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-white-house-west-wing-view.jpg
+- name: old-door-lock-old-door-lock-2-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-ww2-dresden.jpg
+- name: old-house-oldhouse-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-atari-missle.jpg
+- name: containership-containership-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-sand-paper.jpg
+- name: death-valley-death-valley-national-park-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-bright-sand.jpg
+- name: docks-docks-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-rainbow-festival.jpg
+- name: old-cabin-oldcabin-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-kandinsky-bv.jpg
+- name: nazi-invasion-IMG_6174.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_6174.jpg
+- name: castle-wall-DSC-0067-really-hot.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-really-hot.JPG
+- name: walled-garden-walled-garden-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-feed-people.jpg
+- name: berlinwall2-berlinwall-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-clean-view.jpg
+- name: art-museum-art-museum-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-space-pizza.jpg
+- name: gypsy-wagon-gypsywagon-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-pablo-blue.jpg
+- name: old-school-house-old-schoolhouse-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-crabapple.jpg
+- name: rockingchair-rockingchair-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-atari-missle.jpg
+- name: subway-subway-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-emily-carr.jpg
+- name: border-crossing-bordercrossing-neo-instinct.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-neo-instinct.png
+- name: dragon-desert-desert-dragon-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-post-modern.jpg
+- name: oldhouse-oldhouse-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-gred-mash.jpg
+- name: stalin-time-going-to-dowtown-los-angeles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-going-to-dowtown-los-angeles.jpg
+- name: oldcabin-oldcabin-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-far-away.jpg
+- name: adam-smith-adam-smith-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-hot-spicy.jpg
+- name: ellis-island-ellisisland-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-internet-numbers.jpg
+- name: oldcabin-oldcabin-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-green-zuma.jpg
+- name: server-cloud1-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-propaganda-leaflets.jpg
+- name: rockingchair-rockingchair-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-plentiful.jpg
 - name: aws-s3-diamondcreek-diamondcreek-still-1200.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-diamondcreek-diamondcreek-still-1200.jpg
-- name: oldhotel-oldhotel-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-blue-brush.jpg
-- name: power-lines-power-lines-empty-space-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-kand-two.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-gred-mash.jpg
-- name: stories-status-berlin-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-status-berlin-dark-dali.jpg
-- name: castle-wall-DSC-0067-gan-vogh.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-gan-vogh.JPG
-- name: subway-subway-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-bright-sand.jpg
-- name: art-museum-art-museum-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-green-zuma.jpg
-- name: stalin-time-nyc-streets-laundromat.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-nyc-streets-laundromat.jpg
-- name: rockingchair-rockingchair-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-diego-rivera1.jpg
-- name: server-cloud-server-racks-door-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-rainbow-festival.jpg
-- name: wall-cannon-wall-cannon-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wall-cannon-wall-cannon-blue-circuit.jpg
-- name: oldhotel-oldhotel-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-yellow-paper.jpg
-- name: old-gas-pumps-oldgaspumps-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-rainbow-festival.jpg
-- name: beach-rocks-beach-rocks-currents-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-dali-three.jpg
-- name: berlinwall2-berlinwall-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-pablo-blue.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-colorful-dream.jpg
-- name: downtheline-downtheline-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-graham-sutherland.jpg
-- name: lincoln-memorial-lincolnmemorial-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-yellow-collage.jpg
-- name: razorwire-DSC-0080-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-umberto-bocc.jpg
-- name: oldhousecars-house-old-cars-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-smoking-cigarette.jpg
-- name: mosaic-face-mosaic-face-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-feed-people.jpg
-- name: copper-circuit-statue-liberty-clouds-front-far.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-statue-liberty-clouds-front-far.jpg
-- name: rockingchair-rockingchair-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-purple-pond.jpg
-- name: store-on-corner-oldcabin-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-crunch-paper.jpg
-- name: rain-princess-DSC_0062.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0062.jpg
-- name: white-house-lawn-white-house-window-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-cinnamon-rolls.jpg
-- name: cannon-facing-cannon-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cannon-facing-cannon-blue-circuit.jpg
-- name: server-racks-door-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-door-atari-missle.jpg
-- name: stalin-time-face-eyes-open-statue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-face-eyes-open-statue.jpg
-- name: window-window-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-creativity.jpg
-- name: statue-of-liberty-front-view-statueofliberty-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-dark-rain.jpg
-- name: subway-subway-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-atari-missle.jpg
-- name: meadowbutterfly-meadow-butterfly-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-ww2-color.jpg
-- name: copper-circuit-cruise-ship-shore-log.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-cruise-ship-shore-log.jpg
-- name: locked-up-steam-lock-up-steam-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-alberto-giacometti.jpg
+- name: ellis-island-ellisisland-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-oily-mcoilface.jpg
+- name: school-clouds-church-clouds-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-umberto-bocc.jpg
+- name: downtheline-downtheline-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-crunch-paper.jpg
+- name: flower-barbed-wire-flower-barbed-wire-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-pablo-blue.jpg
 ---
 New Defense Grants May Benefit Enid Infrastructure.&nbsp;Powerful Storm Pounds Southern California With Rain, Snow.&nbsp;Sheriff Needs Your Help.&nbsp;Missouri Football Hires Former Kansas Football Coach.&nbsp;Israel's Embattled Netanyahu Declares Victory In Primary.&nbsp;Children Give Back To The Community.&nbsp;Japan Revises Fukushima Cleanup Plan, Delays Key Steps.&nbsp;Goff Seeks To End Rams' Disappointing Season On A High Note.&nbsp;
